models angepasst und db neu erstellt